@@ -4,6 +4,7 @@
   * Added the following instance methods to PageObject
     * #button
     * #text_field
+    * #hidden_field
   * Updated to use selenium-webdriver 2.4.0
   * Updated to use watir-webdriver 0.3.2
 
